name:                chocolate-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/marcosh/chocolate-servant#readme
license:             BSD3
license-file:        LICENSE
author:              marcosh
maintainer:          pasafama@gmail.com
copyright:           2017 marcosh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Models
    , Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , servant-server
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable chocolate-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chocolate-servant
                     , persistent-postgresql
  default-language:    Haskell2010

test-suite chocolate-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chocolate-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/chocolate-servant
